(2/15/12) - v9.0.3 - more break fixes
- Fixed: fixed all the events that should be able to destroy a shop
(2/15/12) - v9.0.2 - fix from AgentME
- Fixed: Enderman can no longer break shops if shop protection is active
- Fixed: Pistons can no longer break shops if shop protection is active
(2/14/12) - v9.0.1 - fix default config
- Fixed: Now saves a default config
- Changed: Will not load if exception or error is thrown in onEnable()
(2/7/12) - v9.0.0 - major refactor
- Changed default sign format to be much more lenient 
- Changed API to be a bit more sane
- Added color support in messages
(1/29/12) - v8.4.2 - new events
- Fixed events to work with new annotations
- Changed redstone hook for CraftBukkit (fixes redstone issue)
(1/21/12) - v8.4.2a - code revision
- Added URL to plugin.yml
- Made a bit of code for logblock look better
- Added missing @Override
(12/30/11) - v8.4.1 - bugfix
- Fixed: NameCollection.yml clearing entries with only 1 player on server restart
(12/28/11) - v8.4.0 - feature build
- Added extended name service
- Fixed: Fresh installations should work now
(12/27/11) - v8.3.3 - bugfix build
- Fixed: Alias and names acted strangely
(12/23/11) - v8.3.2r2 - re export with Locale
(12/23/11) - v8.3.2 - new logblock hook
- Fixed: newest version of LogBlock
(12/21/11) - v8.3.1 - URGENT bugfix
- Fixed: Enchantments being removed during transactions
(12/21/11) - v8.3.1a - translation build
- Added Danish Locale, special thanks to Duerdum9
(12/16/11) - v8.3.0 - redstone triggering
- Added redstone trigger
- Added redstone trigger config option, default false
- Fixed exception with logblock when not installed but config had it enabled
(12/15/11) - v8.2.5a - license change
- GNU GPL
(12/15/11) - v8.2.4 - bugfix to test build
- Fixed: Accidentally the permission defaults
- Fixed: Accidentally all the item comparisons
(12/14/11) - v8.2.4a - 1.0.1 partial update
- Updated the com.wolvereness.util package for compatibility with BukkitNyan